--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <body>
         <header>
             <ul>
-                <li class="current"><a href="#about">Harry Chung</a></li>
+                <li class="current"><a href="#intro">Harry Chung</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </header>
         <main>
-            <section class="about" id="about">
-                <p>Howdy, welcome to my page. I'm a web developer currently based in Los Angeles. My interests include technology, music, sports, games, beer and the great outdoors. I pride myself in self-discipline and my thirst for efficiency. I also love sharing experiences, new discoveries, laughs, and smiles. Feel free to contact me or browse some of my projects</p>
+            <section class="about" id="intro">
+                <h2> Howdy, I’m Harry. I’m a web developer based in Los Angeles, CA.</h2>
             </section>
             <section class="projects" id="projects">
                 <div class="project-card">
@@ -34,6 +35,12 @@
                         <button><a target="_blank" href="https://codechung.github.io/eggquiz/">Demo</a></button>
                     </div>
                 </div>
+            </section>
+            <section class="about" id="about">
+                <p>I am a web developer and recent graduate of the Web Developer bootcamp at Bloc. I love coding because there’s something exciting about bringing a project to life. I’m a real sucker for some good libraries.
+                <br>
+                When I'm not coding, you can find me outdoors camping, playing the guitar, or practicing tae kwon do. Feel free to contact me or browse some of my projects!
+                </p>
             </section>
             <section class="contact" id="contact">
                 <div class="contact-text">
