implement navbar scroll highlighting, trying to add scroll snap

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             </ul>
         </header>
         <main>
-            <section class="about" id="intro">
+            <section class="intro" id="intro">
                 <h2> Howdy, I’m Harry. I’m a web developer based in Los Angeles, CA.</h2>
             </section>
             <section class="projects" id="projects">
+                <!-- TODO change button stylings -->
                 <div class="project-card">
                     <img src="images/egg_quiz_compressed.png" alt="egg quiz project">
                     <div class="project-description">
