--- a/index.html
+++ b/index.html
@@ -19,42 +19,50 @@
             </ul>
         </header>
         <main>
-            <section class="intro" id="intro">
-                <h2> Howdy, I’m Harry. I’m a web developer based in Los Angeles, CA.</h2>
-            </section>
-            <section class="projects" id="projects">
-                <!-- TODO change button stylings -->
-                <div class="project-card">
-                    <img src="images/egg_quiz_compressed.png" alt="egg quiz project">
-                    <div class="project-description">
-                        <h2>Egg Quiz</h2>
-                        <i class="fab fa-html5"></i>
-                        <i class="fab fa-css3-alt"></i>
-                        <i class="fab fa-js-square"></i>
-                        <p>An interactive quiz about everyone’s favorite breakfast item.</p>
-                        <button><a target="_blank" href="https://github.com/CodeChung/eggquiz">Code</a></button>
-                        <button><a target="_blank" href="https://codechung.github.io/eggquiz/">Demo</a></button>
+            <div class="wrapper-1">
+                <section class="intro" id="intro">
+                        <h2> Howdy, I’m Harry. I’m a web developer based in Los Angeles, CA.</h2>
+                </section>
+            </div>
+            <div class="wrapper-2">
+                <section class="projects" id="projects">
+                    <!-- TODO change button stylings -->
+                    <div class="project-card">
+                        <img src="images/egg_quiz_compressed.png" alt="egg quiz project">
+                        <div class="project-description">
+                            <h2>Egg Quiz</h2>
+                            <i class="fab fa-html5"></i>
+                            <i class="fab fa-css3-alt"></i>
+                            <i class="fab fa-js-square"></i>
+                            <p>An interactive quiz about everyone’s favorite breakfast item.</p>
+                            <button><a target="_blank" href="https://github.com/CodeChung/eggquiz">Code</a></button>
+                            <button><a target="_blank" href="https://codechung.github.io/eggquiz/">Demo</a></button>
+                        </div>
                     </div>
-                </div>
-            </section>
-            <section class="about" id="about">
-                <p>I am a web developer and recent graduate of the Web Developer bootcamp at Bloc. I love coding because there’s something exciting about bringing a project to life. I’m a real sucker for some good libraries.
-                <br>
-                <br>
-                When I'm not coding, you can find me outdoors camping, playing the guitar, or practicing tae kwon do. Feel free to contact me or browse some of my projects!
-                </p>
-            </section>
-            <section class="contact" id="contact">
-                <div class="contact-text">
-                    <h2>Contact Me!</h2>
-                    <p>You can reach me here:</p>
-                    <div class="contact-links">
-                        <a href="https://github.com/CodeChung/" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="mailto:hc9825@gmail.com"><i class="fas fa-envelope"></i></a>
-                        <a href="https://www.linkedin.com/in/harry-h-chung/"><i class="fab fa-linkedin"></i></a>
-                    </div>                    
-                </div>
-            </section>
+                </section>
+            </div>
+            <div class="wrapper-1">
+                <section class="about" id="about">
+                    <p>I am a web developer and recent graduate of the Web Developer bootcamp at Bloc. I love coding because there’s something exciting about bringing a project to life. And I’m always learning something new!
+                    <br>
+                    <br>
+                    When I'm not coding, you can find me outdoors camping, playing the guitar, or practicing tae kwon do. Feel free to contact me or browse some of my projects.
+                    </p>
+                </section>
+            </div>
+            <div class="wrapper-2">
+                <section class="contact" id="contact">
+                    <div class="contact-text">
+                        <h2>Contact Me!</h2>
+                        <p>You can reach me here:</p>
+                        <div class="contact-links">
+                            <a href="https://github.com/CodeChung/" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="mailto:hc9825@gmail.com"><i class="fas fa-envelope"></i></a>
+                            <a href="https://www.linkedin.com/in/harry-h-chung/"><i class="fab fa-linkedin"></i></a>
+                        </div>                    
+                    </div>
+                </section>
+            </div>
         </main>
         <script src="index.js"></script>
     </body>
