--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
-        <header>
+        <header role="banner">
             <ul>
                 <li class="current"><a href="#intro">Harry Chung</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -18,7 +18,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </header>
-        <main>
+        <main role="contentinfo">
             <div class="wrapper-1">
                 <section class="intro" id="intro">
                         <h2> Howdy, I’m Harry. I’m a web developer based in Los Angeles, CA.</h2>
