navbar query change

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         </header>
         <main role="contentinfo">
             <div class="wrapper-1">
+                <div class="scroll-liner"></div>
                 <section class="intro" id="intro">
                         <h2> Howdy, I’m Harry. I’m a web developer based in Los Angeles, CA.</h2>
                 </section>
             </div>
             <div class="wrapper-2">
+                <div class="scroll-liner"></div>
                 <section class="projects" id="projects">
                     <!-- TODO change button stylings -->
                     <div class="project-card">
@@ -42,6 +44,7 @@
                 </section>
             </div>
             <div class="wrapper-1">
+                <div class="scroll-liner"></div>
                 <section class="about" id="about">
                     <p>I am a web developer and recent graduate of the Web Developer bootcamp at Bloc. I love coding because there’s something exciting about bringing a project to life. And I’m always learning something new!
                     <br>
@@ -51,6 +54,7 @@
                 </section>
             </div>
             <div class="wrapper-2">
+                <div class="scroll-liner"></div>
                 <section class="contact" id="contact">
                     <div class="contact-text">
                         <h2>Contact Me!</h2>
