converting to react

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="contact-links">
                             <a href="https://github.com/CodeChung/" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="mailto:hc9825@gmail.com"><i class="fas fa-envelope"></i></a>
-                            <a href="https://www.linkedin.com/in/harry-h-chung/"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/harry-h-chung/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>                    
                     </div>
                 </section>
